--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -96,13 +96,13 @@ favicon: /img/favicon.png
 # Avatar (頭像)
 avatar:
   img: '/img/taylor.jpg'
-  effect: false
+  effect: true
 
 # Disable all banner image
 disable_top_img: false
 
 # The banner image of home page
-index_img: '/img/蝴蝶忍.png'
+index_img: '/img/蝴蝶忍.jpg'
 
 # If the banner of page not setting, it will show the top_img
 default_top_img: 
@@ -514,7 +514,7 @@ tag_ui: # 留空或 index
 # Website Background (設置網站背景)
 # can set it to color or image (可設置圖片 或者 顔色)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
-background: url('/img/蝴蝶忍2.png')
+background: url('/img/蝴蝶忍2.jpg')
 
 # Footer Background
 footer_bg: false
@@ -597,7 +597,7 @@ beautify:
 # Global font settings
 # Don't modify the following settings unless you know how they work (非必要不要修改)
 font:
-  global-font-size:
+  global-font-size: 20px
   code-font-size:
   font-family:
   code-font-family:
@@ -696,8 +696,8 @@ busuanzi:
 # Time difference between publish date and now (網頁運行時間)
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
-  enable: false
-  publish_date:
+  enable: true
+  publish_date: 2021/9/6 00:00:00
 
 # Aside widget - Newest Comments
 newest_comments:
@@ -711,7 +711,7 @@ newest_comments:
 # --------------------------------------
 
 # Change font size
-change_font_size: false
+change_font_size: true
 
 # Conversion between Traditional and Simplified Chinese (簡繁轉換)
 translate:
