--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -92,7 +92,7 @@ katex:
 # --------------------------------------
 
 # Favicon（網站圖標）
-favicon: /img/favicon.jpg
+favicon: /img/siteIcon/favicon.png
 
 # Avatar (頭像)
 avatar:
@@ -833,6 +833,14 @@ lazyload:
 #   favicon_32_32: /pwa/32.png
 #   favicon_16_16: /pwa/16.png
 #   mask_icon: /pwa/safari-pinned-tab.svg
+pwa:
+  enable: true
+  manifest: /manifest.json
+  theme_color: '#B1E0D2'
+  apple_touch_icon: /img/siteicon/favicon_package_v0.16/apple-touch-icon.png
+  favicon_32_32: /img/siteicon/favicon_package_v0.16/favicon-32x32.png
+  favicon_16_16: /img/siteicon/favicon_package_v0.16/favicon-16x16.png
+  mask_icon: /img/siteicon/favicon_package_v0.16/safari-pinned-tab.svg
 
 # Open graph meta tags
 # https://developers.facebook.com/docs/sharing/webmasters/
