--- a/_config.yml
+++ b/_config.yml
@@ -145,3 +145,27 @@ githubcalendar:
   api: https://python-github-calendar-api.vercel.app/api
   # api: https://python-gitee-calendar-api.vercel.app/api
   calendar_js: https://cdn.jsdelivr.net/gh/Zfour/hexo-github-calendar@1.16/hexo_githubcalendar.js
+
+
+# hexo-offline-popup.
+service_worker:
+  maximumFileSizeToCacheInBytes: 5242880 # 缓存的最大文件大小，以字节为单位，此处设置为5MB。
+  staticFileGlobs:
+    - public/**/*.{js,html,xml,css,png,jpg,gif,svg,webp,eot,ttf,woff,woff2}
+    # - public/**/*.{html,xml} #精简版使用这行即可
+  # 静态文件合集，如果你的站点使用了例如webp格式的文件，请将文件类型添加进去。。
+  # 注意，此处的文件类型就是会缓存下来的所有文件类型，如果不需要缓存那么多，
+  # 而只是想判断网页更新与否，缓存html和xml即可。
+  stripPrefix: public
+  verbose: false
+  runtimeCaching:
+    # CDNs - should be cacheFirst, since they should be used specific versions so should not change
+    - urlPattern: /* # 如果你需要加载CDN資源，请配置该选项，如果沒有，可以不配置。
+      handler: cacheFirst
+      options:
+        origin: unpkg.com # 又拍云
+    - urlPattern: /*
+      handler: cacheFirst
+      options:
+        origin: cdn.jsdelivr.net # jsdelivr
+    # 更多cdn可自行参照上述格式进行配置。
