--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-githubcalendar": "^1.2.3",
+    "hexo-offline-popup": "^1.0.3",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-pug": "^2.0.0",
