--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Latte
+title: Latte's Blog
 subtitle: ""
-description: "生活就是要和喜欢的一切在一起"
+description: 'Warm smell of colitis'
 keywords: blog
 author: Latte
 language: zh-CN
@@ -14,11 +14,11 @@ Home: / || fas fa-home
 Archives: /archives/ || fas fa-archive
 Tags: /tags/ || fas fa-tags
 Categories: /categories/ || fas fa-folder-open
-List||fas fa-list:
-  Music: /music/ || fas fa-music
-  Movie: /movies/ || fas fa-video
-Link: /link/ || fas fa-link
-About: /about/ || fas fa-heart
+# List||fas fa-list:
+#   Music: /music/ || fas fa-music
+#   Movie: /movies/ || fas fa-video
+# Link: /link/ || fas fa-link
+# About: /about/ || fas fa-heart
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -106,7 +106,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: butterfly
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
