--- a/package.json
+++ b/package.json
@@ -6,31 +6,25 @@
     "build": "hexo clean && hexo generate && gulp && hexo d",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "dev": "hexo clean && hexo generate && gulp && hexo server"
+    "dev": "hexo clean && hexo generate && gulp && hexo server",
+    "start": "hexo server"
   },
   "hexo": {
-    "version": "5.4.0"
+    "version": "6.3.0"
   },
   "dependencies": {
     "gulp": "^4.0.2",
-    "hexo": "^5.0.0",
-    "hexo-butterfly-artitalk": "^1.0.3",
-    "hexo-deployer-git": "^3.0.0",
-    "hexo-generator-archive": "^1.0.0",
-    "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^2.0.0",
-    "hexo-generator-search": "^2.4.3",
-    "hexo-generator-tag": "^1.0.0",
-    "hexo-githubcalendar": "^1.2.3",
-    "hexo-offline-popup": "^1.0.3",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^4.0.0",
-    "hexo-renderer-pug": "^2.0.0",
-    "hexo-renderer-stylus": "^2.0.1",
-    "hexo-server": "^2.0.0",
-    "hexo-theme-butterfly": "^3.8.3",
+    "hexo": "^6.3.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-theme-next": "^8.14.1"
   },
   "devDependencies": {
     "gulp-clean-css": "^4.3.0",
