--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Latte's Blog
-subtitle: ""
+subtitle: "FrontEnd Developer"
 description: 'Warm smell of colitis'
 keywords: blog
 author: Latte
